tests/baselines/reference/parser645086_2.errors.txt
parser645086_2.ts(1,14): error TS1005: ',' expected.
parser645086_2.ts(1,15): error TS1134: Variable declaration expected.


==== parser645086_2.ts (2 errors) ====
    var v = /[^]/]/
                 ~
!!! error TS1005: ',' expected.
                  ~
!!! error TS1134: Variable declaration expected.